Expanded findClosest() to cover the 8 conditions